--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_base">BaseActivity</string>
     <string name="title_activity_registered">RegisteredActivity</string>
+    <string name="title_activity_newteam">NewteamActivity</string>
 
 </resources>
