--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_base">BaseActivity</string>
     <string name="title_activity_registered">RegisteredActivity</string>
     <string name="title_activity_newteam">NewteamActivity</string>
+    <string name="title_activity_newteam_activitys">NewteamActivitys</string>
 
 </resources>
