--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="title_activity_newteam_activitys">NewteamActivitys</string>
     <string name="title_activity_request_code">RequestCodeActivity</string>
     <string name="title_activity_user_setting">UserSettingActivity</string>
+    <string name="title_activity_add_buddy">AddBuddyActivity</string>
+    <string name="title_activity_find_friends">FindFriendsActivity</string>
 
 </resources>
