--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="title_activity_add_buddy">AddBuddyActivity</string>
     <string name="title_activity_find_friends">FindFriendsActivity</string>
     <string name="title_activity_mdfsdfsdf">Mdfsdfsdf</string>
+    <string name="title_activity_main_activitysdfsd">MainActivitysdfsd</string>
 
 </resources>
