--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="title_activity_user_setting">UserSettingActivity</string>
     <string name="title_activity_add_buddy">AddBuddyActivity</string>
     <string name="title_activity_find_friends">FindFriendsActivity</string>
+    <string name="title_activity_mdfsdfsdf">Mdfsdfsdf</string>
 
 </resources>
