--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="title_activity_about_us">AboutUsActivity</string>
     <string name="title_activity_main_activity_ssss">MainActivitySSSS</string>
     <string name="title_activity_group">GroupActivity</string>
+    <string name="title_activity_team_setting">TeamSettingActivity</string>
 
 </resources>
