--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="title_activity_group">GroupActivity</string>
     <string name="title_activity_team_setting">TeamSettingActivity</string>
     <string name="title_activity_new_party">NewPartyActivity</string>
+    <string name="title_activity_map">MapActivity</string>
 
 </resources>
