--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="title_activity_new_party">NewPartyActivity</string>
     <string name="title_activity_map">MapActivity</string>
     <string name="title_activity_time">TimeActivity</string>
+    <string name="title_activity_ok_party">OkPartyActivity</string>
 
 </resources>
