--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">BJ_0603_主界面布局</string>
+    <string name="app_name">必聚</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_login">必聚</string>
     <string name="title_activity_base">BaseActivity</string>
     <string name="title_activity_registered">RegisteredActivity</string>
     <string name="title_activity_newteam">NewteamActivity</string>
@@ -27,5 +27,7 @@
     <string name="title_activity_time">TimeActivity</string>
     <string name="title_activity_ok_party">OkPartyActivity</string>
     <string name="title_activity_party_details">PartyDetailsActivity</string>
+    <string name="title_activity_more">MoreActivity</string>
+    <string name="title_activity_big_map">BigMapActivity</string>
 
 </resources>
