--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="title_activity_ok_party">OkPartyActivity</string>
     <string name="title_activity_party_details">PartyDetailsActivity</string>
     <string name="title_activity_more">MoreActivity</string>
+    <string name="title_activity_big_map">BigMapActivity</string>
 
 </resources>
