--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="title_activity_party_details">PartyDetailsActivity</string>
     <string name="title_activity_more">MoreActivity</string>
     <string name="title_activity_big_map">BigMapActivity</string>
+    <string name="title_activity_binding_phone">BindingPhoneActivity</string>
     <string name="only_choose_num">超出可选图片张数</string>
     <string name="finish">完成</string>
     <string name="invalidSD">sdcard无效或没有插入！</string>
@@ -39,6 +40,7 @@
     <string name="camera_cancel">取消</string>
     <string name="no_photo">相册没有图片</string>
     <string name="title_activity_binding_phone">BindingPhoneActivity</string>
+    <string name="title_activity_comments_list">CommentsListActivity</string>
 
     <string name="only_choose_num">超出可选图片张数</string>
     <string name="finish">完成</string>
