--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="no_photo">相册没有图片</string>
     <string name="title_activity_binding_phone">BindingPhoneActivity</string>
     <string name="title_activity_comments_list">CommentsListActivity</string>
+    <string name="title_activity_friends_data">FriendsDataActivity</string>
 
     <string name="only_choose_num">超出可选图片张数</string>
     <string name="finish">完成</string>
