--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -42,18 +42,16 @@
     <string name="title_activity_binding_phone">BindingPhoneActivity</string>
     <string name="title_activity_comments_list">CommentsListActivity</string>
     <string name="title_activity_friends_data">FriendsDataActivity</string>
-
     <string name="only_choose_num">超出可选图片张数</string>
     <string name="finish">完成</string>
     <string name="invalidSD">sdcard无效或没有插入！</string>
     <string name="photo">选择相册</string>
     <string name="album">相册</string>
     <string name="preview">预览</string>
-    <string name="unfinished">完成</string> 
+    <string name="unfinished">完成</string>
     <string name="camera_cancel">取消</string>
     <string name="no_photo">相册没有图片</string>
-    
-     <string name="Send_the_following_pictures">Send the following pictures?</string>
+    <string name="Send_the_following_pictures">Send the following pictures?</string>
     <string name="location_prefix">[my location]</string>
     <string name="location_recv">[%1$s location]</string>
     <string name="voice">Voice</string>
@@ -170,8 +168,10 @@
     <string name="not_connect_to_server">Not connect to server, please try again later</string>
     <string name="Whether_to_empty_all_chats">Whether to empty all chats</string>
     <string name="title_activity_more_picture">MorePictureActivity</string>
+    <string name="prompt">prompt</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="title_activity_before_login">BeforeLoginActivity</string>
+    <string name="title_activity_login_jump">LoginJumpActivity</string>
+    <string name="title_activity_phone_registered">PhoneRegisteredActivity</string>
 
-       <string name="prompt">prompt</string>
-           <string name="button_cancel">Cancel</string>
-    
 </resources>
