--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -227,6 +227,9 @@
     <string name="text_delivered_msg">Delivered</string>
     <string name="title_activity_photo_view">PhotoViewActivity</string>
     <string name="title_activity_team_setting2">TeamSetting2Activity</string>
+    <string name="app_tip">提示</string>
+    <string name="getting_prepayid">正在获取预支付订单...</string>
+    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
 
     <!-- home界面 -->
     <string name="home_title_text">小组</string>
@@ -359,10 +362,17 @@
     <string name="requestcode2_add_team">加入小组</string>
     <string name="title_activity_request_code3">RequestCode3Activity</string>
     <string name="title_activity_sliding">SlidingActivity</string>
-	<!--新建小组界面  -->
-	 <string name="NewTeam_title_right">完成</string>
+    <!-- 新建小组界面 -->
+    <string name="NewTeam_title_right">完成</string>
     <string name="NewTeam_title_left">返回</string>
     <string name="NewTeam_prompt">小组封面</string>
     <string name="NewTeam_hint">小组名称</string>
     <string name="NewTeam_prompt_1">邀请好友加入小组</string>
+    <string name="title_activity_cost">CostActivity</string>
+    <string name="title_activity_limit_number">LimitNumberActivity</string>
+    <string name="title_activity_graphic_details">GraphicDetailsActivity</string>
+    <string name="title_activity_pay">PayActivity</string>
+    <string name="title_activity_wxpay_entry">WXPayEntryActivity</string>
+    <string name="title_activity_preview">PreviewActivity</string>
+
 </resources>
