--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -265,7 +265,7 @@
     <string name="partydetails_partake">参与</string>
     <string name="partydetails_did_not_say">未表态</string>
     <string name="partydetails_party_organizer">组织者</string>
-    <string name="partydetails_prompt">点击参与人数,查看支付信息</string>
+    <string name="partydetails_prompt">点击查看图文信息</string>
     <string name="partydetails_apply">报名</string>
     <!-- 小组设置界面 -->
     <string name="setting2_title_text">社团设置</string>
@@ -368,7 +368,6 @@
     <string name="NewTeam_prompt">小组封面</string>
     <string name="NewTeam_hint">小组名称</string>
     <string name="NewTeam_prompt_1">邀请好友加入小组</string>
-    
     <string name="title_activity_cost">CostActivity</string>
     <string name="title_activity_limit_number">LimitNumberActivity</string>
     <string name="title_activity_graphic_details">GraphicDetailsActivity</string>
@@ -383,5 +382,6 @@
     <string name="title_activity_new_account">NewAccountActivity</string>
     <string name="title_activity_history_list">HistoryListActivity</string>
     <string name="title_activity_delete_payment_account">DeletePaymentAccountActivity</string>
+    <string name="title_activity_graphic_preview">GraphicPreviewActivity</string>
 
 </resources>
