--- a/agree/res/values/strings.xml
+++ b/agree/res/values/strings.xml
@@ -330,7 +330,7 @@
     <!-- 小组更多界面 -->
     <string name="more_prompt">提示</string>
     <string name="more_prompt_1">选择想要对聚会做的操作类型</string>
-    <string name="more_member_share">分享</string>
+    <string name="more_member_share">分享聚会</string>
     <string name="more_creator_add">添加到系统日历</string>
     <string name="more_title_cancel">取消</string>
     <string name="more_creator_cancel">取消聚会</string>
@@ -385,5 +385,8 @@
     <string name="title_activity_delete_payment_account">DeletePaymentAccountActivity</string>
     <string name="title_activity_graphic_preview">GraphicPreviewActivity</string>
     <string name="title_activity_wechat_shaer">WEChatShaerActivity</string>
+    <string name="title_activity_team_friends">TeamFriendsActivity</string>
+    <string name="title_activity_change_group_name">ChangeGroupNameActivity</string>
+    <string name="title_activity_add_team_friends">AddTeamFriendsActivity</string>
 
 </resources>
